# lelang

./: .gitignore  Cargo.toml  README.md  app.js  conda-lock.yml  dashboard_plan.md  environment.yml  index.html  justfile  lot-lelang.html  scrapy.cfg  style.css  test_primp.rs  test_rustls.rs  test_ureq.rs
docs/superpowers/plans/: 2026-07-12-frontend-filters-plan.md  2026-07-12-geocoding.md  2026-07-13-map-center-jakarta-plan.md
docs/superpowers/specs/: 2026-07-12-frontend-filters-design.md  2026-07-13-map-center-jakarta-design.md
lelang/: items.py  middlewares.py  pipelines.py  settings.py
lelang/spiders/: properties.py
src/: api.rs  db.rs  geocoding.rs  main.rs
