[package]
name = "lelang-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client — rustls-tls to bypass TLS fingerprint blocking (LibreSSL is blocked)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database + Parquet export
duckdb = { version = "1.1", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# UX
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
primp = "1.3.1"
